# shamir

./: Cargo.toml
shamir/: Cargo.toml  Settings.toml
shamir-client/: Cargo.toml
shamir-client/src/: telegram.rs
shamir-client/src/telegram/: mod.rs
shamir-client/src/telegram/model/: copy_message_request.rs  forward_message_request.rs  mod.rs  reply_markup.rs  response.rs  send_message_request.rs  send_photo_request.rs  set_webhook_request.rs
shamir-model/: Cargo.toml
shamir-model/src/: animation.rs  audio.rs  callback_query.rs  chat.rs  chat_invite_link.rs  chat_join_request.rs  chat_location.rs  chat_member.rs  chat_member_updated.rs  chat_permissions.rs  chat_shared.rs  chosen_inline_result.rs  contact.rs  document.rs  encrypted_passport_element.rs  file.rs  forum_topic_created.rs  forum_topic_edited.rs  forum_topic_reopened.rs  game.rs  general_forum_topic_unhidden.rs  inline_keyboard_button.rs  inline_keyboard_markup.rs  inline_query.rs  lib.rs  location.rs  login_url.rs  mask_position.rs  message.rs  message_auto_delete_timer_changed.rs  message_entity.rs  order_info.rs  passport_data.rs  passport_file.rs  photo_size.rs  poll.rs  poll_answer.rs  pre_checkout_query.rs  proximity_alert_triggered.rs  shipping_address.rs  (+12 more)
shamir-model/src/telegram/: animation.rs  audio.rs  bot_command.rs  bot_command_scope.rs  bot_description.rs  bot_name.rs  bot_short_description.rs  callback_game.rs  (+87 more)
shamir-settings/: Cargo.toml
shamir-settings/src/: http.rs  lib.rs  telegram.rs
shamir-util/: Cargo.toml
shamir/src/: main.rs
src/: main.rs
src/shamir/: mod.rs
(+4 files in other folders)
