[package]
name = "shamir-client"
version = "0.1.0"
edition = "2021"

[dependencies]
awc = { version = "3.1.1", features = ["openssl"] }
openssl = "0.10.52"
serde = { version="1.0.160", features = [ "derive" ] }
serde_json = "1.0.96"
shamir-model = { path = "../shamir-model" }
shamir-settings = { path = "../shamir-settings" }
