[package]
name = "shamir"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-rt = "2.8.0"
config = { version = "0.13.3", features = ["toml"] }
shamir-client = { path = "../shamir-client" }
shamir-model = { path = "../shamir-model" }
shamir-settings = { path = "../shamir-settings" }
